src/navigation/css/components/_honeycomb.navigation.components.vertical.scss
/*------------------------------------*\
	#VERTICAL NAVIGATION
\*------------------------------------*/

.nav--vertical {

	ul, li {
		@include margin(0);
		list-style: none;
		position: relative;
	}

	ul ul {
		display: none;
	}

	a {
		@include padding(0.25);
		@include padding(0.8, "left");
		@include padding(0.8, "right");
		@include font-size(14px, 20px);
		display: block;
		position: relative;
		border-left-width: 4px;
		border-left-style: solid;
		border-left-color: transparent;
		border-right-width: 4px;
		border-right-style: solid;
		border-right-color: transparent;
		cursor: pointer;
	}


	// right-aligned nav
	&.nav--vertical--right {
		text-align: right;

		& > ul > li > a:before {
			left: auto;
			right: 18px;
		}

		a {
			@include padding(1.5, "right");
		}

		li li li a {
			@include padding(2, "right");
		}
	}


	.nav--vertical__active, .nav--vertical__active-parent {
		& > ul {
			display: block;
		}

		& > a {
			font-weight: bold;
		}
	}

	li li li a {
		@include padding(1.5, "left");
	}

	& > ul > li > a {
		@include font-size(16px, 28px);
	} 

	&.nav--vertical--has-icons {
		.nav--vertical__collapse {
			display: block;
		}

		&.nav--vertical--collapsed {
			overflow: hidden;
			width: 54px;

			& > ul {
				width: 9999px;

				ul {
					display: none; // Hide sub nav's when menu collapsed.
				}
			}

			.nav--vertical__collapse__icon {
				@extend .icon--chevron-right;
				margin-left: 15px;
				left: 0;
				right: auto;
			}
		}

		& > ul > li > a {
			&:before {
				position: absolute;
				left: 14px;
				z-index: 1;
			}

			background-repeat: no-repeat;
			background-size: 16px 16px;
			background-position: 15px 50%;
		}

		a {
			@include padding(1.2, "left");
		}

		li li li a {
			@include padding(2, "left");
		}
	}

	.nav--vertical__toggle {
		@extend .icon--chevron-down;
		@include font-size(14px);
		@include margin(0.5, "right");
		display: block;
		position: absolute;
		top: 50%;
		right: 0;
		transform: translateY(-50%);
	}

	.nav--vertical__active > a > .nav--vertical__toggle {
		@extend .icon--chevron-up;
	}

	.nav--vertical__toggle,
	.nav--vertical__active > a > .nav--vertical__toggle {
		&:before {
			@include margin(0, "right");
		}
	}

	.nav--vertical__collapse {
		display: none; // Only show if nav has icons.
		position: relative;

		a {

			&, &:hover {
				color: transparent;
				border-left-color: transparent;
			}
		}

		.nav--vertical__collapse__icon {
			@extend .icon--chevron-left;
			@include margin(0.5, "right");
			position: absolute;
			top: 50%;
			right: 0;
			transform: translateY(-50%);

			&:before {
				@include margin(0, "right");
			}
		}
	}

	// Colours.
	& {
		background-color: $hc-nav-vertical-background-color;

		a {
			color: $hc-nav-vertical-link-color;

			&:hover {
				background-color: $hc-nav-vertical-link-background-color-hover;
				color: $hc-nav-vertical-link-color-hover;
				border-left-color: $hc-nav-vertical-link-border-color-hover;
			}
		}

		.nav--vertical__active {

			& > a {

				&, &:hover {
					background-color: $hc-nav-vertical-link-background-color-active;
					color: $hc-nav-vertical-link-color-active;
					border-left-color: $hc-nav-vertical-link-background-color-active;
				}
			}
		}

		.nav--vertical__active-parent {

			& > a {
				background-color: $hc-nav-vertical-link-background-color-hover;
				color: $hc-nav-vertical-link-color-hover;
				border-left-color: $hc-nav-vertical-link-border-color-hover;
			}

			.nav--vertical__active-parent {
				background-color: $hc-nav-vertical-subsublist-background-color;

				& > a {
					background-color: transparent;
				}
			}
		}

		ul {
			background-color: $hc-nav-vertical-list-background-color;

			ul {
				background-color: $hc-nav-vertical-sublist-background-color;

				ul {
					background-color: $hc-nav-vertical-subsublist-background-color;
				}
			}
		}

		.nav--vertical__collapse__icon {
			color: $hc-nav-vertical-link-color-hover;
		}


		// border colours for right-aligned nav
		&.nav--vertical--right {
			a {
				&:hover {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-link-border-color-hover;
				}
			}

			.nav--vertical__active {
				& > a {
					&, &:hover {
						border-left-color: transparent;
						border-right-color: $hc-nav-vertical-link-background-color-active;
					}
				}
			}

			.nav--vertical__active-parent {
				& > a {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-link-border-color-hover;
				}
			}
		}
	}

	&--dark {
		background-color: $hc-nav-vertical-dark-background-color;	

		a {
			color: $hc-nav-vertical-dark-link-color;

			&:hover {
				background-color: $hc-nav-vertical-dark-link-background-color-hover;
				color: $hc-nav-vertical-dark-link-color-hover;
				border-left-color: $hc-nav-vertical-dark-link-border-color-hover;
			}
		}

		.nav--vertical__active {

			& > a {

				&, &:hover {
					background-color: $hc-nav-vertical-dark-link-background-color-active;
					color: $hc-nav-vertical-dark-link-color-active;
					border-left-color: $hc-nav-vertical-dark-link-background-color-active;
				}
			}
		}

		.nav--vertical__active-parent {

			& > a, .nav--vertical__active-parent {
				background-color: $hc-nav-vertical-dark-link-background-color-hover;
				color: $hc-nav-vertical-dark-link-color-hover;
				border-left-color: $hc-nav-vertical-dark-link-border-color-hover;
			}
		}

		ul {
			background-color: $hc-nav-vertical-dark-list-background-color;

			ul {
				background-color: $hc-nav-vertical-dark-sublist-background-color;

				ul {
					background-color: $hc-nav-vertical-dark-subsublist-background-color;
				}
			}
		}

		.nav--vertical__collapse__icon {
			color: $hc-nav-vertical-dark-link-color-hover;
		}

		// border colours for right-aligned nav
		&.nav--vertical--right {
			a {
				&:hover {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-dark-link-border-color-hover;
				}
			}

			.nav--vertical__active {
				& > a {
					&, &:hover {
						border-left-color: transparent;
						border-right-color: $hc-nav-vertical-dark-link-background-color-active;
					}
				}
			}

			.nav--vertical__active-parent {
				& > a {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-dark-link-border-color-hover;
				}
			}
		}
	}

	&--has-icons {
		& > ul > li > a:before {
			color: $hc-nav-vertical-link-color;
		}
	}
	&--has-icons.nav--vertical--dark {
		& > ul > li > a:before {
			color: $hc-nav-vertical-dark-link-color;
		}
	}


	// Lightweight style nav
	// Used on www.simple-talk.com
	// Classname is 'thin' instead of 'light' to avoid a false opposite with .nav--vertical--dark
	&.nav--vertical--thin {
		&, ul, li, li:hover, a, a:hover {
			background-color: transparent;
		}

		a {
			@include padding(0.5, 'right');
			@include padding(0, 'top');
			@include padding(0, 'bottom');
			color: $hc-link-color;
			border-left-color: $hc-nav-vertical-thin-link-border-color;

			&:hover {
				border-left-color: $hc-nav-vertical-thin-link-border-color-hover;
				color: $hc-link-hover-color;
			}
		}

		.nav--vertical__active {
			a {
				font-weight: bold;
				border-left-color: $hc-nav-vertical-thin-link-border-color-active;
			}
		}

		
		// right-aligned thin nav
		&.nav--vertical--right {
			a {
				border-left-color: transparent;
				border-right-color: $hc-nav-vertical-thin-link-border-color;

				&:hover {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-thin-link-border-color-hover;
				}
			}

			.nav--vertical__active {
				a {
					border-left-color: transparent;
					border-right-color: $hc-nav-vertical-thin-link-border-color-active;
				}
			}
		}
    }

    &.nav--vertical--minimal {
        @include padding(0.25, 'bottom');
        padding-top: 1px;
        border-right: 5px solid color('grey', 2);

        &, ul, li, li:hover, a, a:hover, .nav--vertical__active-parent .nav--vertical__active-parent {
			background-color: transparent;
        }

        li li {
            @include margin(0.6, 'left');
        }

        a, a:hover {
            @include padding(0);
            @include padding(0.6, 'left');
            @include padding(0.5, 'right');
            @include padding(0.1, 'top');
            @include padding(0.1, 'bottom');
            @include font-size(16px);
            color: color('grey', 7);
            border: none;
        }

        ul ul a, ul ul a:hover {
            @include padding(0.5, 'left');
            @include font-size(14px);
        }

        .nav--vertical__toggle {
            right: auto;
            left: 0;
			top: 17px;
			color: color('grey', 6);

            &:before {
                content: "\e607";
            }
        }

        .nav--vertical__active > a > .nav--vertical__toggle:before,
        .nav--vertical__active-parent > a > .nav--vertical__toggle:before {
            content: "\e605";
        }

        .nav--vertical__active > a {
            border-right: 5px solid color('blue', 5);
            color: color('blue', 6);
            width: calc(100% + 5px);
        }
    }
}

